--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,12 +11,12 @@
           <input class="form-control" id="email" type="email" name="email" placeholder="example@gmail.com">
           <label for="password">Password:</label>
           <input id="password" class="form-control" type="password" name="password", placeholder="password">
-          <button style="margin-top: 50px;padding: 10px 30px;" class="btn btn-light post-job-submit" type="submit">Login</button>
+          <button style="margin-top: 25px;padding: 10px 30px;" class="btn btn-light post-job-submit" type="submit">Login</button>
         </form>
       </div>
       <hr style="width: 400px;height: 2px;">
       <div style="text-align: center;">
-        <p style="font-weight: bold;">OR</p>
+        <p style="font-weight: bold;margin: 0;">OR</p>
         <p style="text-decoration: underline;">For IIT BHU Students Only</p>
           <a href="/auth/google">
             <div class='g-sign-in-button' style="margin: 15px;">
