--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,17 @@
 <% include ./partials/header2 %>
 
-
+<style>
+  @media screen and (max-width: 500px) {
+    .logind{
+      width: 95%!important;
+    }
+  }
+</style>
 <div class="container login">
     <h2>Login</h2>    
       <p>Only students who have registered on E-Summit'20 IIT BHU can login through this protal.</p>
 
-      <div class="form-group" style="width: 50%;margin: 40px auto 25px;">
+      <div class="form-group logind" style="width: 50%;margin: 40px auto 25px;">
         <form action="/login" method="post">
           <label for="email">E-Summit'20 Email ID:</label>
           <input class="form-control" id="email" type="email" name="email" placeholder="example@gmail.com">
@@ -17,7 +23,7 @@
       <hr style="width: 400px;height: 2px;">
       <div style="text-align: center;">
         <p style="font-weight: bold;margin: 0;">OR</p>
-        <p style="text-decoration: underline;">For IIT BHU Students Only</p>
+        <p style="text-decoration: underline;">For IIT BHU Students Only.</p>
           <a href="/auth/google">
             <div class='g-sign-in-button' style="margin: 15px;">
               <div class=content-wrapper>
