--- a/views/internships/index.ejs
+++ b/views/internships/index.ejs
@@ -5,6 +5,13 @@
     border-color:rgb(255, 47, 72);
   }
 </style>
+<style>
+  @media screen and (max-width: 500px) {
+    .jobs{
+      width: 95%!important;
+    }
+  }
+</style>
 <div class="container-fluid job-portal">
     <!-- Featured Internship-->
    <h2> Find Your Suitable Internship</h2>
