--- a/views/internships/show.ejs
+++ b/views/internships/show.ejs
@@ -5,6 +5,13 @@
       white-space: pre-wrap;
     }
   </style>
+  <style>
+    @media screen and (max-width: 500px) {
+      .internship-detail{
+        width: 95%!important;
+      }
+    }
+  </style>
 <div class="container-fluid internship-detail">
     <h2>Internship Details</h2>
     <% if(applied){ %>
