--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -526,7 +526,7 @@
         }, false);
         })();
         
-       // setTimeout(function(){$('.flash').remove();}, 5000);
+        setTimeout(function(){$('.flash').remove();}, 5000);
         $('.navbar-nav li').click(function(){
             alert();
             $('.active').removeClass('active');
