--- a/views/view-interns.ejs
+++ b/views/view-interns.ejs
@@ -10,7 +10,7 @@
     
     <div class="container">
         <h5 style="margin: 40px auto;text-align: center;color: #a6c60b;font-size: 35px;text-decoration: underline;"><%= company %></h5>
-        <p style="text-align: center;font-size: 19px;margin-bottom: 25px;">Applications for Internships</p>
+        <p style="text-align: center;font-size: 19px;margin-bottom: 25px;">Applications for Internship</p>
     </div>
     <table class="table table-striped table-dark">
         <thead>
